Added Product Listing

--- a/MyShop/MyShop.WebUI/Views/ProductManager/Index.cshtml
+++ b/MyShop/MyShop.WebUI/Views/ProductManager/Index.cshtml
@@ -33,7 +33,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            <img class="img-thumbnail" style="height:50px" src="~/Content/ProductImages/item.image"/>
+            <img class="img-thumbnail" style="height:auto" src="~/Content/ProductImages/item.image"/>
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
